--- a/src/app/admin/user-admin/admin-user-form-add/admin-user-form-add.component.html
+++ b/src/app/admin/user-admin/admin-user-form-add/admin-user-form-add.component.html
@@ -13,7 +13,7 @@
   <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
       <div class="md:grid md:grid-cols-3 md:gap-6 ">
           <div class="mt-5 md:mt-0 md:col-span-3 border">
-              <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+              <form [formGroup]="userForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
                   <div class="shadow sm:rounded-md sm:overflow-hidden">
                       <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
                           <div class="col-span-6">
@@ -63,7 +63,7 @@
                                       <div class="flex text-sm text-gray-600">
                                       <label class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                                           <span>Upload a file</span>
-                                          <input formControlName="file-upload" name="file-upload" type="file" class="sr-only">
+                                          <input type="file" formControlName="img"  (change)="upload($event)"  class="sr-only">
                                       </label>
                                       <p class="pl-1">or drag and drop</p>
                                       </div>
