--- a/src/app/client/product/product-client-list/product-client-list.component.html
+++ b/src/app/client/product/product-client-list/product-client-list.component.html
@@ -6,7 +6,7 @@
                 <i class="fa fa-angle-left" aria-hidden="true"></i>
             </div>
             <div class="text-yellow-500">
-                <a routerLink="/" class="text-yellow-500 font-semibold">Quay lại trang</a>
+                <a routerLink="/" class="hover:text-yellow-500 font-semibold">Trang chủ</a>
             </div>
             <div class="mx-2 text-[#5d5f6c]">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -25,8 +25,8 @@
                         <a routerLink="/" class="font-semibold text-[15px] ">{{pro.name}}</a>
                     </h3>
                     <div class="flex">
-                      <p class="text-[red] font-semibold text-[14px]">{{pro.sale_price | currency: "VND"}}</p>
-                      <p class="text-[gray] font-semibold text-[12px] ml-[20px] line-through">{{pro.price | currency: "VND"}}</p>
+                      <p class="text-[red] font-semibold text-[14px]">{{pro.sale_price.toLocaleString("vi-VN", { style: "currency", currency: "VND" })}}</p>
+                      <p class="text-[gray] font-semibold text-[12px] ml-[20px] line-through">{{pro.price.toLocaleString("vi-VN", { style: "currency", currency: "VND" })}}</p>
                     </div>
                 </div>
             </div>
