--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
   .shopee-cart-number-badge {
       @apply relative rounded-[2.75rem] min-w-[0.6875rem] leading-[1.2em] p-[0.3125rem] top-[-10px]
   }
-  .image1 {
+  .image {
       @apply w-[1440px] h-[520px]
   }
   /* css của footer */
@@ -48,7 +48,7 @@
 .sub-menu li{
   display: block;
   padding: 0 25px;
-  line-height: 50px;
+  line-height: 30px;
   color: black;
   text-decoration: none;
 }
