update  formarrt lại code

--- a/src/app/client/layouts/footer-client/footer-client.component.html
+++ b/src/app/client/layouts/footer-client/footer-client.component.html
@@ -54,8 +54,14 @@
                     <div>
                         <p>Giám đốc: Bùi Tuấn Nghĩa</p>
                         <p>Địa chỉ: Số 55 Quang Trung, Nguyễn Du, Hai Bà Trưng, Hà Nội</p>
-                        <p>Số điện thoại: <a routerLink="#" class="hover:text-[#d51c24]">(+84) 1900571595</a> </p>
-                        <p>Email: <a routerLink="#" class="hover:text-[#d51c24]">cskh_online@nxbkimdong.com.vn</a> </p>
+                        <p>
+                            Số điện thoại:
+                            <a routerLink="#" class="hover:text-[#d51c24]">(+84) 1900571595</a>
+                        </p>
+                        <p>
+                            Email:
+                            <a routerLink="#" class="hover:text-[#d51c24]">cskh_online@nxbkimdong.com.vn</a>
+                        </p>
                     </div>
                 </div>
                 <div class="box">
@@ -76,7 +82,7 @@
     </div>
     <div class="bg-[#979696] h-[30px] leading-[30px]">
         <div class="max-w-[1440px] mx-auto">
-          <p class="text-center">COPYRIGHTS © 2021 BY NXB KIM ĐỒNG. POWERED BY HARAVAN</p>
+            <p class="text-center">COPYRIGHTS © 2021 BY NXB KIM ĐỒNG. POWERED BY HARAVAN</p>
         </div>
     </div>
 </div>
