--- a/src/app/client/product/product-client-detail/product-client-detail.component.html
+++ b/src/app/client/product/product-client-detail/product-client-detail.component.html
@@ -3,7 +3,7 @@
         <div class="w-[1080px] h-auto mx-auto">
             <div class="w-[1080px] py-[10px] flex border-b-2 border-[#f2f2f2]">
                 <div class="text-yellow-500">
-                    <a routerLink="/" class="text-yellow-500 font-semibold">Trang chủ</a>
+                    <a routerLink="/" class="hover:text-yellow-500 font-semibold">Trang chủ</a>
                 </div>
                 <div class="mx-2 text-[#5d5f6c]">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
