--- a/src/app/admin/product-admin/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/admin/product-admin/admin-product-detail/admin-product-detail.component.html
@@ -1,7 +1,54 @@
-<div>
-    <div>
-        <a routerLink="/admin/products">Quay Lại</a>
-    </div>
-    <div>{{product._id}}</div>
-    <div>{{product.name}}</div>
+<div class="w-[1080px] h-auto mx-auto">
+  <div class="w-[1080px] py-[10px] flex border-b-2 border-[#f2f2f2]">
+      <div class="text-yellow-500">
+          <a routerLink="/admin/products" class="hover:text-yellow-500 font-semibold">Quay lại trang</a>
+      </div>
+      <div class="mx-2 text-[#5d5f6c]">
+          <i class="fa fa-angle-right" aria-hidden="true"></i>
+      </div>
+      <div class="text-yellow-500 font-semibold">
+          Chi tiết sản phẩm
+      </div>
+      <div class="mx-2 text-[#5d5f6c]">
+          <i class="fa fa-angle-right" aria-hidden="true"></i>
+      </div>
+      <div class="text-yellow-500 font-semibold">
+        {{product.name}}
+      </div>
+  </div>
+  <div class="w-[1080px] h-auto flex justify-between mt-[20px]">
+      <div class="w-[500px] h-[600px] mr-[20px] border">
+          <div>
+              <img src="{{product.img}}" alt="" class="w-[500px] h-[600px]">
+          </div>
+      </div>
+      <div class="w-[460px]">
+          <div class="text-[30px] font-semibold mb-3 w-[460px]">
+            {{product.name}}
+          </div>
+          <div class="text-[#51545f] mb-[20px] w-[460px]">
+              <h1 class="text-[21px] font-medium">Thông tin chung:</h1><br>
+              <div class="font-medium text-[16px] break-words">{{product.short_desc}}</div>
+          </div>
+          <div class="flex">
+            <span class="text-[red] font-semibold text-2xl mr-8">
+              {{product.sale_price.toLocaleString("vi-VN", { style: "currency", currency: "VND" })}}
+            </span>
+            <span class="text-[gray] font-semibold text-[20px] line-through mr-8">
+              {{product.price.toLocaleString("vi-VN", { style: "currency", currency: "VND" })}}
+            </span>
+            <span class="text-[gray] font-semibold text-[16px]">
+              (Bạn đã tiết kiệm được {{(product.price - product.sale_price).toLocaleString("vi-VN", { style: "currency", currency: "VND" })}})
+            </span>
+          </div>
+      </div>
+  </div>
+</div>
+<div class="w-[1080px] h-auto mx-auto ">
+  <div class="text-[#5d5f6c] text-2xl font-medium mt-[50px] uppercase border-b-2 border-[#f2f2f2]">
+      thông tin chi tiết sản phẩm
+  </div>
+  <div class="w-[1080px] my-[20px]">
+    {{product.desc}}
+  </div>
 </div>
