--- a/src/app/client/auth/signin/signin.component.html
+++ b/src/app/client/auth/signin/signin.component.html
@@ -14,6 +14,7 @@
               <div class="mt-4">
                   <label class="block">Mật khẩu <span class="text-red-500">*</span></label>
                   <input type="password" name="password" formControlName="password" class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                  <app-show-validate [field]="signin.get('password')"></app-show-validate>
               </div>
               <div class="flex items-center justify-between">
                   <div class="flex items-start">
@@ -27,7 +28,7 @@
                   <a routerLink="/forgetPass" class="text-sm text-blue-600 hover:underline">Forgot Password?</a>
               </div>
               <div>
-                  <button type="submit" class="w-full px-4 py-2 font-medium text-center text-white transition-colors duration-200 rounded-md bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-1 dark:focus:ring-offset-darker">
+                  <button [disabled]="!signin.valid" type="submit" class="w-full px-4 py-2 font-medium text-center text-white transition-colors duration-200 rounded-md bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-1 dark:focus:ring-offset-darker">
                   Đăng nhập
                   </button>
               </div>
@@ -48,7 +49,7 @@
                   <i class="fab fa-github"></i>
               </div>
           </div>
-          <div class="text-sm text-gray-600 dark:text-gray-400">Bạn chưa có tài khoản? <a routerLink="/signup" class="text-blue-600 hover:underline">Đăng ký</a></div>
+          <div class="text-sm text-gray-600 dark:text-gray-400">Bạn chưa có tài khoản? <a routerLink="/auth/signup" class="text-blue-600 hover:underline">Đăng ký</a></div>
       </div>
   </div>
 </main>
